style.css: Fix overlapping of inputs in account page

--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,7 @@ nav a:hover {
 }
 
 .acc .form-group input {
-	width: 100%;
+	width: 90%;
 	padding: 12px 15px;
 	border-radius: 8px;
 	border: 2px solid rgba(255, 255, 255, 0.2);
